Added pageclip integration

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       href="https://s.pageclip.co/v1/pageclip.css"
       media="screen"
     />
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="UTF-8"></script>
     <!-- Halfmoon CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css"
